--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/stack": "^7.6.2",
+    "axios": "^1.13.2",
     "expo": "~54.0.22",
     "expo-blur": "~15.0.7",
     "expo-font": "~14.0.9",
@@ -20,12 +22,15 @@
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "^2.29.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0"
   },
   "private": true,
   "devDependencies": {
-    "react-native-worklets": "^0.6.1"
+    "@types/react": "~19.1.10",
+    "react-native-worklets": "^0.6.1",
+    "typescript": "~5.9.2"
   }
 }
