--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/stack": "^7.6.2",
+    "@reduxjs/toolkit": "^2.10.1",
     "axios": "^1.13.2",
     "expo": "~54.0.22",
     "expo-blur": "~15.0.7",
@@ -25,7 +26,8 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-redux": "^9.2.0"
   },
   "private": true,
   "devDependencies": {
